--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_SEO_API_ID="karthikeyakallapu@gmail.com"
 REACT_APP_SEO_API_KEY="42296fdbf0ed8e15"
-REACT_APP_BACKEND_URL="http://localhost:3100"
+REACT_APP_BACKEND_URL="https://seo-backendk.onrender.com"
